<resources>
    <string name="app_name">Mis Tareas</string>
    <string name="mis_tareas">Mis Tareas</string>
    <string name="imagen_de_fondo">imagen de fondo</string>
    <string name="my_app">My App</string>
    <string name="usuario">Usuario</string>
    <string name="pass">contraseña</string>
    <string name="itt">itt</string>
    <string name="login">login</string>
    <string name="crea_una_cuenta">Crea una cuenta</string>
    <string name="item">Item</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="terminado">Terminado</string>
    <string name="crear_una_cuenta">Crear una Cuenta</string>
    <string name="repetir">repetir contraseña</string>
    <string name="e_mail">e-mail</string>
    <string name="create">Create</string>
</resources>