<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scaleType="fitXY"
        android:src="@drawable/imagen1"/>
    <TextView
        android:id="@+id/titulo"
        style="@style/etiquetas"
        android:layout_marginTop="20dp"
        android:text="@string/mis_tareas"
        android:textSize="40sp"/>
    <TextView
        android:id="@+id/subtitulo"
        style="@style/etiquetas"
        android:layout_below="@+id/titulo"
        android:layout_marginTop="10dp"
        android:text="@string/itt"
        android:textSize="20sp" />
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/subtitulo"
        android:background="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:padding="10dp">
        <!--        User        -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/usuario"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:background="@color/white"
                android:textSize="17sp">
                <requestFocus />
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
        <!--        Password        -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pass"
                android:inputType="textPassword"
                android:textColorHint="@color/black"
                android:background="@color/white"
                android:textSize="17sp" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/loginbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="16dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:text="@string/login"
        android:textSize="20sp"
        android:onClick="login"/>
    <TextView
        android:id="@+id/cuenta"
        style="@style/etiquetas"
        android:layout_below="@+id/loginbutton"
        android:layout_marginTop="20dp"
        android:text="@string/crea_una_cuenta"
        android:textSize="20sp"
        android:onClick="crearCuenta"/>

</RelativeLayout>
